[gd_scene load_steps=2 format=3 uid="uid://dj8qhig318yl4"]

[ext_resource type="Script" path="res://data/menu.gd" id="1_yy4ue"]

[node name="Menu" type="Control"]
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
script = ExtResource("1_yy4ue")

[node name="ColorRect" type="ColorRect" parent="."]
layout_mode = 0
offset_right = 904.0
offset_bottom = 850.0
color = Color(0.333333, 0, 0.333333, 1)

[node name="Serve" type="Button" parent="."]
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -102.0
offset_top = -45.0
offset_right = 108.0
offset_bottom = 45.0
grow_horizontal = 2
grow_vertical = 2
text = "Serve"

[node name="Play" type="Button" parent="."]
layout_mode = 0
offset_left = 330.0
offset_top = 521.0
offset_right = 540.0
offset_bottom = 611.0
text = "Play"

[node name="LineEdit" type="LineEdit" parent="."]
layout_mode = 0
offset_left = 337.0
offset_top = 236.0
offset_right = 523.0
offset_bottom = 267.0
text = "192.168.1.240"

[node name="LineEdit2" type="LineEdit" parent="."]
layout_mode = 0
offset_left = 337.0
offset_top = 170.0
offset_right = 523.0
offset_bottom = 201.0
text = "Player"

[connection signal="pressed" from="Serve" to="." method="_on_serve_pressed"]
[connection signal="pressed" from="Play" to="." method="_on_play_pressed"]
